--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "sample app", root_path, id: "logo" %>
+    <%= link_to "Demo app", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home", root_path %></li>
@@ -13,12 +13,12 @@
               <li><%= link_to "Profile", current_user %></li>
               <li class="divider"></li>
               <li>
-                <%= link_to "Sign out", logout_path, method: "delete" %>
+                <%= link_to "Sign out", signout_path, method: "delete" %>
               </li>
             </ul>
           </li>
         <% else %>
-          <li><%= link_to "Sign in", login_path %></li>
+          <li><%= link_to "Sign in", signin_path %></li>
           <li><%= link_to "Sign up", signup_path %></li>
         <% end %>
       </ul>
